@@ -31,6 +31,8 @@ public class Bridge_Repair {
                 if (numbers.size() <= 2) {
                     add += berechne("*", result, numbers);
                     add += berechne("+", result, numbers);
+                    add += berechne("|", result, numbers);
+
                 } else {
                     StringBuilder combinations = combinations(numbers);
                     add += berechne(combinations, result, numbers);
@@ -39,6 +41,7 @@ public class Bridge_Repair {
                 result.clear();
                 numbers.clear();
             }
+            scanner.close();
 
             System.out.println(add);
         } catch (FileNotFoundException e) {
@@ -50,6 +53,7 @@ public class Bridge_Repair {
     private static long berechne(String operator, ArrayList<Long> result, ArrayList<Integer> numbers) {
         long sum = 0;
         long add = 0;
+        String combine = "";
 
         switch (operator) {
             case "*":
@@ -69,6 +73,14 @@ public class Bridge_Repair {
                     sum += add;
                 }
                 break;
+            case "|":
+                for (int i = 0; i < numbers.size(); i++) {
+                    combine += numbers.get(i).toString();
+                }
+                if (Integer.parseInt(combine) == result.getFirst()) {
+                    sum += Integer.parseInt(combine);
+                }
+                break;
         }
 
         return sum;
@@ -76,54 +88,61 @@ public class Bridge_Repair {
 
     private static long berechne(StringBuilder combinations, ArrayList<Long> result, ArrayList<Integer> numbers) {
 
-        long add = 0;
+        long addieren = 0;
 
         Scanner scanner = new Scanner(combinations.toString());
         while (scanner.hasNext()) {
             String next = scanner.next();
-
+            //  System.out.println(next);
             if (next.isEmpty()) {
                 break;
             }
-            add = numbers.get(0);
+            // System.out.println(numbers);
+            addieren = numbers.getFirst();
+            //  System.out.println(addieren);
 
             for (int i = 0; i < next.length(); i++) {
                 if (next.charAt(i) == '*') {
-                    add *= numbers.get(i);
+                    addieren *= numbers.get(i + 1);
                 } else if (next.charAt(i) == '+') {
-                    add += numbers.get(i);
+                    addieren += numbers.get(i + 1);
+                } else if (next.charAt(i) == '|') {
+                    String combine = Long.toString(addieren);
+                    combine += numbers.get(i + 1).toString();
+                    addieren = Long.parseLong(combine);
                 }
+              //  System.out.println(addieren);
 
             }
-            if (add == result.get(0)) {
-                return add;
-            } else {
-                add = 0;
+            if (addieren == result.getFirst()) {
+                return addieren;
+            } else  {
+                addieren = 0;
             }
         }
 
         scanner.close();
-        return add;
+        return addieren;
     }
 
     private static StringBuilder combinations(ArrayList<Integer> numbers) {
 
-        char[] letters = {'+', '*'}; // Die beiden Buchstaben
+        char[] letters = {'+', '*', '|'}; // Die beiden Buchstaben
         int length = numbers.size() - 1; // Die gewünschte Länge
         int totalCombinations = (int) Math.pow(letters.length, length); // 2^8 Kombinationen
         StringBuilder sb = new StringBuilder();
         StringBuilder combinations = new StringBuilder();
 
-        for (int i = 1; i < totalCombinations; i++) {
+        for (int i = 0; i < totalCombinations; i++) {
             sb.setLength(0); // Lösche den vorherigen Inhalt
             int current = i;
             for (int j = 0; j < length; j++) {
                 sb.append(letters[current % letters.length]); // Füge den Buchstaben hinzu
                 current /= letters.length; // Bewege dich zur nächsten Stelle
             }
-            combinations.append(sb.reverse().append(" "));
+            combinations.append(sb.append(" "));
         }
-        System.out.print(combinations);
+        // System.out.println(combinations);
         return combinations; // Gib die Kombination aus
     }
 }
